[package]
name = "ra-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["postgres-support", "mysql-support", "sqlite-support"]
postgres-support = ["dep:postgres"]
mysql-support = ["dep:mysql"]
sqlite-support = ["dep:rusqlite"]
duckdb-support = ["duckdb"]
sqlserver-support = ["tiberius", "tokio", "tokio-util", "futures-util"]
oracle-support = ["oracle"]
all-databases = [
    "postgres-support",
    "mysql-support",
    "sqlite-support",
    "duckdb-support",
    "sqlserver-support",
    "oracle-support",
]

[dependencies]
ra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
mysql = { version = "28", optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

# Optional database backends
duckdb = { version = "1.1", optional = true, features = ["bundled"] }
tiberius = { version = "0.12.3", optional = true, default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "net"] }
futures-util = { version = "0.3", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["compat"] }
oracle = { version = "0.6.3", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
