[package]
name = "ra-ml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ML-based cardinality estimation for the RA query optimizer"

[features]
default = ["streaming"]
streaming = [
    "dep:tokio",
    "dep:sqlx",
    "dep:differential-dataflow",
    "dep:timely",
    "dep:abomonation",
    "dep:abomonation_derive",
]

[dependencies]
ra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres"], optional = true }
differential-dataflow = { version = "0.12", optional = true }
timely = { version = "0.12", optional = true }
abomonation = { version = "0.7", optional = true }
abomonation_derive = { version = "0.5", optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "cardinality"
harness = false
