[package]
name = "ra-multimodel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-model optimization rules for graph, document, and time-series databases"

[dependencies]
ra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
egg = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
