[package]
name = "ra-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ra-core = { workspace = true }
lime-sys = { workspace = true }
lime-rs = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { workspace = true }
anyhow = { workspace = true }
sqlparser = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
bigdecimal = ["sqlparser/bigdecimal"]
# The native-Rust parse path (Lime --target=rust) is the default. The legacy
# C FFI path remains available via --no-default-features for one release as a
# fallback; it is slated for removal.
default = ["rust-parser"]
rust-parser = []

[build-dependencies]
cc = "1.2"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "inference_benchmark"
harness = false

[[bench]]
name = "tokenizer_benchmark"
harness = false
