[package]
name = "pg-ra-planner"
description = "PostgreSQL extension: RA optimizer planner integration"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["RA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gregburd/ra"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19"]
pg_test = []
# Enables raw_parser_hook — requires patched PostgreSQL with the hook.
parser_hook = []

[dependencies]
pgrx = { path = "/Users/gregburd/src/pgrx/pgrx" }
ra-core = { path = "../ra-core" }
ra-engine = { path = "../ra-engine" }
ra-hardware = { path = "../ra-hardware" }
ra-parser = { path = "../ra-parser" }
ra-plan-advice = { path = "../ra-plan-advice" }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
pgrx-tests = { path = "/Users/gregburd/src/pgrx/pgrx-tests" }
proptest = "1.5"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

# Override workspace lints: pgrx generates code that triggers
# several of the workspace clippy denials (unsafe, panic, etc.)
# so we use a relaxed lint configuration here.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
# pgrx macros generate code with these patterns
missing_safety_doc = "allow"
missing_panics_doc = "allow"
# pgrx extension code legitimately uses unsafe
unsafe_derive_deserialize = "allow"
