[package]
name = "ra-pg-quic"
version = "0.2.0"
edition = "2021"
rust-version = "1.88.0"
authors = ["RA Contributors"]
license = "MIT OR Apache-2.0"
description = "Ra QUIC listener for PostgreSQL backends (pgrx bgworker)"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_ra_pg_quic"
path = "./src/bin/pgrx_embed.rs"

[dependencies]
ra-core = { path = "../ra-core" }
ra-wire = { path = "../ra-wire" }
pgrx = "0.14"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.11"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
rcgen = "0.14"

[dev-dependencies]
proptest = "1.5"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

# Override workspace lints: pgrx generates code that triggers
# several of the workspace clippy denials (unsafe, panic, etc.)
# so we use a relaxed lint configuration here.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
# pgrx macros generate code with these patterns
missing_safety_doc = "allow"
missing_panics_doc = "allow"
unsafe_derive_deserialize = "allow"
